--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -1,138 +1,44 @@
-/* Reset CSS baseado no Meyerweb reset, v2.0 | 20110126 */
 html,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  vertical-align: baseline;
+body {
+  height: 100%;
 }
 
-/* HTML5 display-role reset para navegadores mais antigos */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-/* Estilos base */
 body {
   margin: 0;
-  font-family: "Nunito", sans-serif;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  font-family: "Nunito", sans-serif;
 }
 
 html {
   font-size: 18px;
-  height: 100%;
+}
+
+h1 {
+  font-size: 32px;
+  margin: 0;
+  font-weight: 800;
+  color: var(--black);
+}
+
+h2,
+h3 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+  color: var(--dark-grey);
+}
+
+a {
+  font-weight: 600;
+  text-decoration: none;
+  color: var(--dark-grey);
 }
 
 ol,
 ul {
   list-style: none;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+  margin: 0;
 }
