--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -3,11 +3,16 @@
 <div class="container">
   <h1>Remédios do dia</h1>
 
-  @if (medslist === null) {
+  <!-- <div><app-day-medication-chip /></div> -->
+
+  @if (medslist() === null) {
   <p>Você não precisa tomar nenhum remédio hoje!</p>
-  } @else {
-  <div><app-day-medication-chip /></div>
-  }
+  } @else { @for (item of medslist(); track item.id) {
+  <div class="meds">
+    <app-day-medication-chip [med]="item"></app-day-medication-chip>
+  </div>
+  } }
+
   <div class="btn-div">
     <button type="button" class="btn">Novo remédio</button>
     <button type="button" class="btn">Ver todos</button>
