--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -15,6 +15,8 @@
 
   <div class="btn-div">
     <button type="button" class="btn">Novo remédio</button>
-    <button type="button" class="btn">Ver todos</button>
+    <button type="button" class="btn" [routerLink]="['/meds']">
+      Ver todos
+    </button>
   </div>
 </div>
