--- a/src/app/components/day-medication-chip/day-medication-chip.component.scss
+++ b/src/app/components/day-medication-chip/day-medication-chip.component.scss
@@ -8,7 +8,7 @@
     gap: 10px;
     border-radius: 6rem;
     padding: 1rem 1.5rem;
-    max-width: 80%;
+    width: 60vw;
     margin-left: auto;
     margin-right: auto;
 
@@ -37,6 +37,10 @@
       display: flex;
       justify-content: end;
       align-items: center;
+
+      p {
+        margin-right: 1rem;
+      }
 
       input {
         cursor: pointer;
