Incluído nome do médico na interface IMedication

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,7 @@
 :host {
   header {
     display: flex;
-    position: fixed;
+    position: absolute;
     height: 100px;
     width: 100%;
     align-items: center;
