--- a/src/app/components/med-list/med-list.component.html
+++ b/src/app/components/med-list/med-list.component.html
@@ -12,7 +12,7 @@
   <div>
     <p>
       <span style="font-weight: 700">Prescrito por: </span><br />
-      Nome do médico
+      {{ med.doctorName }}
     </p>
   </div>
   <div><p>Ativo</p></div>
