--- a/src/app/components/med-list/med-list.component.html
+++ b/src/app/components/med-list/med-list.component.html
@@ -15,6 +15,8 @@
       {{ med.doctorName }}
     </p>
   </div>
-  <div><p>Ativo</p></div>
+  <div>
+    <p>{{ isActive(med.start, med.end) ? "Ativo" : "Inativo" }}</p>
+  </div>
   <div class="more">+</div>
 </section>
