--- a/src/app/pages/all-meds/all-meds.component.html
+++ b/src/app/pages/all-meds/all-meds.component.html
@@ -4,7 +4,13 @@
   @if (medslist() === null) {
   <p>Você não tem nenhum remédio cadastrado.</p>
   <button>Novo remédio</button>
-  } @else { @for (item of medslist(); track item.id) {
+  } @else { @for (item of medslist(); track item.id) { @defer (on viewport) {
   <div class="list"><app-med-list [med]="item" /></div>
-  } }
+  } @placeholder {
+  <p>Esqueleto</p>
+  } @loading {
+  <p>Loading...</p>
+  } @error {
+  <p>Não foi possível carregar os dados.</p>
+  } } }
 </div>
