Corrigida função para verificar se o medicamento está ativo ou inativo

--- a/src/app/components/day-medication-chip/day-medication-chip.component.html
+++ b/src/app/components/day-medication-chip/day-medication-chip.component.html
@@ -16,10 +16,10 @@
       <input
         type="checkbox"
         name="confirmado"
-        id="med-confirm"
+        id="med-confirm-{{ med.id }}"
         aria-label="Confirmação"
       />
-      <label for="med-confirm"></label>
+      <label for="med-confirm-{{ med.id }}"></label>
     </div>
   </div>
 </section>
