--- a/src/app/components/med-list/med-list.component.html
+++ b/src/app/components/med-list/med-list.component.html
@@ -18,5 +18,5 @@
   <div>
     <p>{{ isActive(med.start, med.end) ? "Ativo" : "Inativo" }}</p>
   </div>
-  <div class="more">+</div>
+  <div class="more"><img src="arrow-down.svg" alt="" /></div>
 </section>
