--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -14,7 +14,9 @@
   } }
 
   <div class="btn-div">
-    <button type="button" class="btn">Novo remédio</button>
+    <button type="button" class="btn" [routerLink]="['/newmed']">
+      Novo remédio
+    </button>
     <button type="button" class="btn" [routerLink]="['/meds']">
       Ver todos
     </button>
