--- a/src/app/components/day-medication-chip/day-medication-chip.component.scss
+++ b/src/app/components/day-medication-chip/day-medication-chip.component.scss
@@ -18,6 +18,10 @@
       p {
         font-weight: 600;
       }
+
+      .dose-min {
+        display: none;
+      }
     }
 
     .med-time {
@@ -51,11 +55,11 @@
 
       label {
         display: inline-block;
-        width: 40px; /* Ajusta o tamanho do label */
-        height: 40px; /* Ajusta o tamanho do label */
+        width: 40px;
+        height: 40px;
         background-color: #fff;
         border: 2px solid var(--medium-grey);
-        border-radius: 50%; /* Torna o checkbox redondo */
+        border-radius: 50%;
         position: relative;
       }
 
@@ -72,8 +76,70 @@
         width: 1rem;
         height: 1rem;
         background-color: var(--black);
-        border-radius: 50%; /* Torna o checkmark redondo */
-        transform: translate(-50%, -50%); /* Centraliza o checkmark */
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+
+  @media (max-width: 769px) {
+    .med-chip {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: start;
+
+      .med-check {
+        margin-right: 1rem;
+        .notes {
+          display: none;
+        }
+      }
+
+      .med-data {
+        margin-left: 2rem;
+      }
+    }
+  }
+
+  @media (max-width: 480px) {
+    .med-chip {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      justify-content: start;
+      align-items: center;
+      gap: 0;
+
+      .med-time {
+        margin: 0;
+
+        p {
+          font-size: 1rem;
+          text-align: left;
+        }
+      }
+
+      .med-data {
+        margin: 0;
+        h3 {
+          font-size: 1.2rem;
+        }
+
+        .dose-full {
+          display: none;
+        }
+
+        .dose-min {
+          display: inline;
+        }
+      }
+
+      .med-check {
+        display: flex;
+        justify-content: start;
+        margin: 0;
+        label {
+        }
       }
     }
   }
