--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -6,11 +6,33 @@
       margin: 6rem 0;
     }
 
+    h1 {
+      margin-bottom: 1rem;
+    }
+
     .btn-div {
-      margin-top: 1rem;
+      margin-top: 2rem;
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 1rem;
+    }
+  }
+
+  @media (max-width: 769px) {
+    .btn-div {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .btn-div {
+      display: flex;
+      flex-direction: column;
+
+      .btn {
+        padding: 1rem 0.5rem;
+      }
     }
   }
 }
