Fix - responsivo med-chip

--- a/src/app/components/day-medication-chip/day-medication-chip.component.html
+++ b/src/app/components/day-medication-chip/day-medication-chip.component.html
@@ -9,6 +9,10 @@
       />
       <label for="med-confirm-{{ med.id }}"></label>
     </div>
+    <div>
+      <p class="notes">Observações:</p>
+      <p class="notes">{{ med.medication.notes }}</p>
+    </div>
   </div>
 
   <div class="med-time" aria-label="Horário">
