Incluído link para home no header e responsivo da lista de medicamentos

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,8 @@
   </button>
   <nav aria-label="Navegação principal" [ngClass]="{ show: isMenuVisible }">
     <ul>
-      <li><a href="/remedios">Remédios</a></li>
+      <li><a href="#home">Home</a></li>
+      <li><a href="/meds">Remédios</a></li>
       <li><a href="/medicos">Médicos</a></li>
       <div class="profile">
         <li><a href="">Nome</a></li>
