--- a/src/app/components/day-medication-chip/day-medication-chip.component.scss
+++ b/src/app/components/day-medication-chip/day-medication-chip.component.scss
@@ -13,6 +13,7 @@
 
     .med-data {
       text-align: right;
+      justify-self: flex-start;
       margin-right: 1rem;
       h3 {
         font-size: 1.5rem;
@@ -40,49 +41,53 @@
 
     .med-check {
       display: flex;
-      justify-content: start;
+      justify-content: flex-end;
       align-items: center;
+      position: relative;
 
-      div .notes {
-        margin-left: 1rem;
+      .notes {
         p {
-          margin-left: 1rem;
+          text-align: right;
+          margin-right: 1rem;
         }
       }
 
-      input {
-        cursor: pointer;
-        position: absolute;
-        opacity: 0;
-        width: 40px;
-        height: 40px;
-      }
+      .input {
+        justify-content: flex-end;
+        input {
+          cursor: pointer;
+          position: absolute;
+          opacity: 0;
+          width: 40px;
+          height: 40px;
+        }
 
-      label {
-        display: inline-block;
-        width: 40px;
-        height: 40px;
-        background-color: #fff;
-        border: 2px solid var(--medium-grey);
-        border-radius: 50%;
-        position: relative;
-      }
+        label {
+          display: inline-block;
+          width: 40px;
+          height: 40px;
+          background-color: #fff;
+          border: 2px solid var(--medium-grey);
+          border-radius: 50%;
+          position: relative;
+        }
 
-      input[type="checkbox"]:checked + label {
-        background-color: var(--primary-color);
-        border-color: var(--primary-color);
-      }
+        input[type="checkbox"]:checked + label {
+          background-color: var(--primary-color);
+          border-color: var(--primary-color);
+        }
 
-      input[type="checkbox"]:checked + label::after {
-        content: "";
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        width: 1rem;
-        height: 1rem;
-        background-color: var(--black);
-        border-radius: 50%;
-        transform: translate(-50%, -50%);
+        input[type="checkbox"]:checked + label::after {
+          content: "";
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          width: 1rem;
+          height: 1rem;
+          background-color: var(--black);
+          border-radius: 50%;
+          transform: translate(-50%, -50%);
+        }
       }
     }
   }
