--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,7 +11,7 @@
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="/meds">Remédios</a></li>
-      <li><a href="/medicos">Médicos</a></li>
+      <li><a href="/doctors">Médicos</a></li>
       <div class="profile">
         <li><a href="">Nome</a></li>
         <img src="user.svg" alt="" />
