--- a/src/app/pages/all-meds/all-meds.component.scss
+++ b/src/app/pages/all-meds/all-meds.component.scss
@@ -2,7 +2,11 @@
   .container {
     margin-top: 100px;
     h1 {
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
+    }
+
+    button {
+      margin-bottom: 1rem;
     }
 
     .list {
