--- a/src/app/pages/new-med/new-med.component.scss
+++ b/src/app/pages/new-med/new-med.component.scss
@@ -1,5 +1,67 @@
 :host {
   .container {
     margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h1 {
+      margin-bottom: 1rem;
+    }
+
+    form {
+      width: 100%;
+
+      .form-div {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: first baseline;
+        justify-content: flex-start;
+
+        div {
+          margin-bottom: 1rem;
+        }
+
+        label {
+          display: block;
+          font-weight: 600;
+        }
+
+        .label-show {
+          display: block;
+        }
+
+        input,
+        select,
+        textarea {
+          padding: 0.5rem 1rem;
+          font-size: 1rem;
+          margin-right: 1rem;
+          margin-bottom: 0.5rem;
+          border: none;
+          background-color: var(--off-white);
+          border-radius: 0.5rem;
+        }
+
+        .notes {
+          grid-column: span 3;
+          width: 100%;
+          textarea {
+            justify-self: flex-start;
+            width: 60vw;
+            margin: 0;
+          }
+        }
+      }
+
+      button {
+        margin-left: auto;
+        margin-right: auto;
+        justify-self: center;
+        margin-top: 1rem;
+      }
+    }
   }
 }
