--- a/src/app/components/day-medication-chip/day-medication-chip.component.html
+++ b/src/app/components/day-medication-chip/day-medication-chip.component.html
@@ -1,6 +1,20 @@
 <section class="med-chip" aria-label="Medicamento">
+  <div class="med-data" aria-label="Dados do medicamento">
+    <h3>{{ med.medication.name }}</h3>
+    <p class="dose-full">Dosagem: {{ med.medication.dosage }}</p>
+    <p class="dose-min">{{ med.medication.dosage }}</p>
+  </div>
+
+  <div class="med-time" aria-label="Horário">
+    <p>{{ med.date | date : "shortTime" }}</p>
+  </div>
+
   <div class="med-check" aria-label="Notas e confirmação">
-    <div>
+    <div class="notes">
+      <p><strong>Observações:</strong></p>
+      <p>{{ med.medication.notes }}</p>
+    </div>
+    <div class="input">
       <input
         type="checkbox"
         name="confirmado"
@@ -9,19 +23,5 @@
       />
       <label for="med-confirm-{{ med.id }}"></label>
     </div>
-    <div>
-      <p class="notes">Observações:</p>
-      <p class="notes">{{ med.medication.notes }}</p>
-    </div>
-  </div>
-
-  <div class="med-time" aria-label="Horário">
-    <p>{{ med.date | date : "shortTime" }}</p>
-  </div>
-
-  <div class="med-data" aria-label="Dados do medicamento">
-    <h3>{{ med.medication.name }}</h3>
-    <p class="dose-full">Dosagem: {{ med.medication.dosage }}</p>
-    <p class="dose-min">{{ med.medication.dosage }}</p>
   </div>
 </section>
