--- a/src/app/pages/new-med/new-med.component.html
+++ b/src/app/pages/new-med/new-med.component.html
@@ -67,13 +67,7 @@
             (change)="onMedTypeChange($event)"
             class="dropdown"
           >
-<<<<<<< HEAD
             <option value="" disabled selected>Via de administração</option>
-=======
-            <option value="" disabled selected>
-              Escolha a forma de aplicação
-            </option>
->>>>>>> a3c8a04e633a1b163c6b6da7f1959c26889cae8f
             @for (item of medTypes; track item) {
             <option [value]="item">{{ item }}</option>
             }
@@ -132,14 +126,11 @@
           id="recurrency"
           [(ngModel)]="newMedication.Recurrency"
         />
-<<<<<<< HEAD
         <div>
           <button class="times-btn" type="button" class="btn">
             Adicionar horários
           </button>
         </div>
-=======
->>>>>>> a3c8a04e633a1b163c6b6da7f1959c26889cae8f
       </div>
       <div class="notes">
         <label for="notes">Observações</label>
@@ -160,6 +151,6 @@
   </form>
 </div>
 
-<div class="daily">
+<!-- <div class="daily">
   <h1>Escolha os horários</h1>
-</div>
+</div> -->
