Atualizações no responsivo e interfaces para track correto no med-chip component

--- a/src/app/components/day-medication-chip/day-medication-chip.component.html
+++ b/src/app/components/day-medication-chip/day-medication-chip.component.html
@@ -18,10 +18,10 @@
       <input
         type="checkbox"
         name="confirmado"
-        id="med-confirm-{{ med.name }}"
+        id="med-confirm-{{ med.timeId }}-{{ med.id }}"
         aria-label="Confirmação"
       />
-      <label for="med-confirm-{{ med.name }}"></label>
+      <label for="med-confirm-{{ med.timeId }}-{{ med.id }}"></label>
     </div>
   </div>
 </section>
