--- a/src/app/components/med-list/med-list.component.html
+++ b/src/app/components/med-list/med-list.component.html
@@ -54,13 +54,13 @@
       <p><strong>Observações</strong></p>
       <p>{{ med.notes }}</p>
     </div>
-    <div>
+    <!-- <div>
       <p><strong>Horários</strong></p>
       <ul>
         @for (item of med.times; track item.dateTime) {
         <li>{{ formatDate(item.dateTime) }}</li>
         }
       </ul>
-    </div>
+    </div> -->
   </article>
 </details>
