Criado dialog para salvar horários, lógica implementada para horários diários e semanais.

--- a/src/app/pages/new-med/new-med.component.html
+++ b/src/app/pages/new-med/new-med.component.html
@@ -127,7 +127,12 @@
           [(ngModel)]="newMedication.Recurrency"
         />
         <div>
-          <button class="times-btn" type="button" class="btn">
+          <button
+            class="times-btn"
+            type="button"
+            class="btn"
+            (click)="openDialog()"
+          >
             Adicionar horários
           </button>
         </div>
