--- a/src/app/components/new-time-dialog/new-time-dialog.component.html
+++ b/src/app/components/new-time-dialog/new-time-dialog.component.html
@@ -2,8 +2,6 @@
 <div class="daily">
   <h1 mat-dialog-title>Selecione os horários</h1>
   <mat-dialog-content>
-    <!-- <form action=""> -->
-
     @for (item of newTimes; track $index) {
     <div>
       <label for="">Horário</label>
@@ -19,8 +17,6 @@
     <mat-dialog-actions>
       <button class="btn btn-small" (click)="saveTimes()">Salvar</button>
     </mat-dialog-actions>
-
-    <!-- </form> -->
   </mat-dialog-content>
 </div>
 
@@ -28,89 +24,120 @@
 <div class="weekly">
   <h1 mat-dialog-title>Selecione os dias e horários</h1>
   <mat-dialog-content>
-    <div>
-      <label class="display-label" for="segunda">
-        <input
-          type="checkbox"
-          name=""
-          id=""
-          value="1"
-          (change)="onCheckBoxChange($event)"
-          [disabled]="isMaxSelected && !weekDays.includes(1)"
-        />Segunda</label
-      >
+    <div class="weekdays-checkbox">
+      <div>
+        <label class="display-label" for="segunda">
+          <input
+            type="checkbox"
+            name=""
+            id=""
+            value="1"
+            (change)="onCheckBoxChange($event)"
+            [disabled]="isMaxSelected && !weekDays.includes(1)"
+          />Segunda</label
+        >
+      </div>
+      <div>
+        <label class="display-label" for="terça">
+          <input
+            type="checkbox"
+            name=""
+            id=""
+            value="2"
+            (change)="onCheckBoxChange($event)"
+            [disabled]="isMaxSelected && !weekDays.includes(2)"
+          />Terça</label
+        >
+      </div>
+      <div>
+        <label class="display-label" for="quarta">
+          <input
+            type="checkbox"
+            name=""
+            id=""
+            value="3"
+            (change)="onCheckBoxChange($event)"
+            [disabled]="isMaxSelected && !weekDays.includes(3)"
+          />Quarta</label
+        >
+      </div>
+      <div>
+        <label class="display-label" for="quinta">
+          <input
+            type="checkbox"
+            name=""
+            id=""
+            value="4"
+            (change)="onCheckBoxChange($event)"
+            [disabled]="isMaxSelected && !weekDays.includes(4)"
+          />Quinta</label
+        >
+      </div>
+      <div>
+        <label class="display-label" for="sexta">
+          <input
+            type="checkbox"
+            name=""
+            id=""
+            value="5"
+            (change)="onCheckBoxChange($event)"
+            [disabled]="isMaxSelected && !weekDays.includes(5)"
+          />Sexta</label
+        >
+      </div>
+      <div>
+        <label class="display-label" for="sabado">
+          <input
+            type="checkbox"
+            name=""
+            id=""
+            value="6"
+            (change)="onCheckBoxChange($event)"
+            [disabled]="isMaxSelected && !weekDays.includes(6)"
+          />Sábado</label
+        >
+      </div>
+      <div>
+        <label class="display-label" for="domingo">
+          <input
+            type="checkbox"
+            name=""
+            id=""
+            value="0"
+            (change)="onCheckBoxChange($event)"
+            [disabled]="isMaxSelected && !weekDays.includes(0)"
+          />Domingo</label
+        >
+      </div>
     </div>
-    <div>
-      <label class="display-label" for="terça">
+
+    <div class="time-picker">
+      <h2>Quantas vezes por dia?</h2>
+      <div>
+        <label for="">Frequência diária</label>
         <input
-          type="checkbox"
+          type="number"
           name=""
           id=""
-          value="2"
-          (change)="onCheckBoxChange($event)"
-          [disabled]="isMaxSelected && !weekDays.includes(2)"
-        />Terça</label
-      >
-    </div>
-    <div>
-      <label class="display-label" for="quarta">
+          min="1"
+          max="12"
+          required
+          [(ngModel)]="numberOfTimes"
+        />
+        <button (click)="chooseNumberOfTimes()">Ok</button>
+      </div>
+      <div>
+        @for (item of newNumberOfTimes; track $index) {
+        <label for="">Horário</label>
         <input
-          type="checkbox"
-          name=""
-          id=""
-          value="3"
-          (change)="onCheckBoxChange($event)"
-          [disabled]="isMaxSelected && !weekDays.includes(3)"
-        />Quarta</label
-      >
-    </div>
-    <div>
-      <label class="display-label" for="quinta">
-        <input
-          type="checkbox"
-          name=""
-          id=""
-          value="4"
-          (change)="onCheckBoxChange($event)"
-          [disabled]="isMaxSelected && !weekDays.includes(4)"
-        />Quinta</label
-      >
-    </div>
-    <div>
-      <label class="display-label" for="sexta">
-        <input
-          type="checkbox"
-          name=""
-          id=""
-          value="5"
-          (change)="onCheckBoxChange($event)"
-          [disabled]="isMaxSelected && !weekDays.includes(5)"
-        />Sexta</label
-      >
-    </div>
-    <div>
-      <label class="display-label" for="sabado">
-        <input
-          type="checkbox"
-          name=""
-          id=""
-          value="6"
-          (change)="onCheckBoxChange($event)"
-          [disabled]="isMaxSelected && !weekDays.includes(6)"
-        />Sábado</label
-      >
-    </div>
-    <div>
-      <label class="display-label" for="domingo">
-        <input
-          type="checkbox"
-          name=""
-          id=""
-          value="0"
-          (change)="onCheckBoxChange($event)"
-          [disabled]="isMaxSelected && !weekDays.includes(0)"
-        />Domingo</label
-      >
+          type="time"
+          name="time-{{ $index }}"
+          id="time-{{ $index }}"
+          [(ngModel)]="newTimes[$index]"
+          required
+        />
+        }
+      </div>
     </div>
   </mat-dialog-content>
   <mat-dialog-actions>
@@ -118,4 +145,52 @@
   </mat-dialog-actions>
 </div>
 
+} @else if (data.medication.FrequencyType === 2 || data.medication.FrequencyType
+=== 3) {
+<div class="monthly-yearly">
+  <h1 mat-dialog-title>Escolha seus dias e horários</h1>
+  <mat-dialog-content>
+    @for (item of newDates; track $index) {
+
+    <div>
+      <label for="date">Data</label>
+      <input type="date" name="" id="" [(ngModel)]="newDates[$index]" />
+    </div>
+    }
+
+    <div class="time-picker">
+      <h2>Quantas vezes por dia?</h2>
+      <div>
+        <label for="">Frequência diária</label>
+        <input
+          type="number"
+          name=""
+          id=""
+          min="1"
+          max="12"
+          required
+          [(ngModel)]="numberOfTimes"
+        />
+        <button (click)="chooseNumberOfTimes()">Ok</button>
+      </div>
+      <div>
+        @for (item of newNumberOfTimes; track $index) {
+        <label for="">Horário</label>
+        <input
+          type="time"
+          name="time-{{ $index }}"
+          id="time-{{ $index }}"
+          [(ngModel)]="newTimes[$index]"
+          required
+        />
+        }
+      </div>
+    </div>
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <button class="btn btn-small" (click)="saveMonthlyYearlyTimes()">
+      Salvar
+    </button>
+  </mat-dialog-actions>
+</div>
 }
