--- a/src/app/components/new-time-dialog/new-time-dialog.component.scss
+++ b/src/app/components/new-time-dialog/new-time-dialog.component.scss
@@ -41,4 +41,20 @@
       color: var(--dark-grey);
     }
   }
+
+  .monthly-yearly {
+    background-color: var(--off-white);
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+
+    h1 {
+      color: var(--dark-grey);
+    }
+
+    label {
+      display: none;
+    }
+  }
 }
