--- a/src/app/pages/new-med/new-med.component.html
+++ b/src/app/pages/new-med/new-med.component.html
@@ -3,7 +3,7 @@
 <div class="container">
   <h1>Novo remédio</h1>
 
-  <form action="" method="post">
+  <form action="" method="post" #form="ngForm" (ngSubmit)="submitMedication()">
     <div class="form-div">
       <div>
         <div>
@@ -14,6 +14,10 @@
             id="name"
             [(ngModel)]="newMedication.Name"
             placeholder="Nome do remédio"
+            oninvalid="alert('O nome do remédio é obrigatório.');"
+            required
+            minlength="2"
+            maxlength="255"
           />
         </div>
         <div>
@@ -24,6 +28,7 @@
             id="lab"
             [(ngModel)]="newMedication.Lab"
             placeholder="Laboratório"
+            maxlength="255"
           />
         </div>
 
@@ -35,6 +40,7 @@
             [(ngModel)]="newMedication.DoctorId"
             (change)="onDoctorChange($event)"
             class="dropdown"
+            required
           >
             <option value="" disabled selected>Escolha um médico</option>
             @for (doctor of docsList; track doctor.id) {
@@ -55,6 +61,9 @@
             id="dosage"
             [(ngModel)]="newMedication.Dosage"
             placeholder="Dosagem"
+            required
+            minlength="2"
+            maxlength="255"
           />
         </div>
         <div>
@@ -66,6 +75,7 @@
             [(ngModel)]="newMedication.Type"
             (change)="onMedTypeChange($event)"
             class="dropdown"
+            required
           >
             <option value="" disabled selected>Via de administração</option>
             @for (item of medTypes; track item) {
@@ -91,6 +101,9 @@
             name="start"
             id="start"
             [(ngModel)]="newMedication.Start"
+            required
+            min="2023-01-01"
+            max="2026-12-30"
           />
         </div>
         <div>
@@ -100,6 +113,8 @@
             name="end"
             id="end"
             [(ngModel)]="newMedication.End"
+            min="{{ newMedication.Start + 1 }}"
+            max="2026-12-31"
           />
         </div>
       </div>
@@ -111,8 +126,9 @@
           id="frequency"
           [(ngModel)]="newMedication.FrequencyType"
           (change)="onFrequencyTypeSelect($event)"
+          required
         >
-          <option value="" disabled selected>Selecione a frequência</option>
+          <option selected disabled>Escolha a frequência</option>
           @for (item of frequencyOptions; track item) {
           <option [value]="item.value">
             {{ item.label }}
@@ -125,6 +141,9 @@
           name="recurrency"
           id="recurrency"
           [(ngModel)]="newMedication.Recurrency"
+          required
+          min="1"
+          max="30"
         />
         <div>
           <button
@@ -150,12 +169,6 @@
       </div>
     </div>
 
-    <button type="submit" class="btn" (click)="submitMedication()">
-      Criar
-    </button>
+    <button type="submit" class="btn">Criar</button>
   </form>
 </div>
-
-<!-- <div class="daily">
-  <h1>Escolha os horários</h1>
-</div> -->
