--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -15,4 +15,8 @@
   background-color: var(--medium-grey);
   color: #fff;
   font-weight: 700;
+
+  :disabled {
+    background-color: var(--lighter-grey);
+  }
 }
