--- a/src/scss/theme/_theme.scss
+++ b/src/scss/theme/_theme.scss
@@ -1,14 +1,14 @@
 :root {
   // colors
-  --black: #000;
-  --dark-grey: #333;
-  --medium-grey: #666;
-  --light-grey: #999;
-  --lighter-grey: #ccc;
-
-  --off-white: #f2f2f2;
-  --off-white-010: #e5e5e5;
-
+  --black: #0d0a00;
+  // --dark-grey: #333;
+  // --medium-grey: #666;
+  // --light-grey: #999;
+  --lighter-grey: #d9d9d9;
+  --primary-green: #257a6b;
+  --secondary-green: #208c81;
+  --pink: #b8286e;
+  --white: #fff;
   --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
