--- a/src/app/components/med-list/med-list.component.scss
+++ b/src/app/components/med-list/med-list.component.scss
@@ -6,7 +6,6 @@
 
     summary,
     article {
-      background-color: var(--lighter-grey);
       border-radius: 6rem;
       padding: 2rem 2rem;
       display: grid;
@@ -22,6 +21,11 @@
 
     summary {
       cursor: pointer;
+      background-color: var(--primary-green);
+
+      h2 {
+        color: var(--white);
+      }
     }
 
     article {
@@ -59,6 +63,7 @@
 
     article {
       background-color: var(--off-white);
+      color: var(--black);
     }
 
     .more,
