--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -12,9 +12,9 @@
 
   font-size: 1rem;
 
-  background-color: var(--medium-grey);
-  color: #fff;
-  font-weight: 700;
+  background-color: var(--primary-green);
+  color: var(--white);
+  font-weight: bold;
 
   :disabled {
     background-color: var(--lighter-grey);
