--- a/src/app/components/new-time-dialog/new-time-dialog.component.scss
+++ b/src/app/components/new-time-dialog/new-time-dialog.component.scss
@@ -2,7 +2,7 @@
   .daily {
     display: flex;
     flex-direction: column;
-    background-color: var(--off-white);
+    background-color: var(--lighter-grey);
     justify-content: center;
     align-items: center;
 
@@ -38,19 +38,19 @@
 
     h1,
     label {
-      color: var(--dark-grey);
+      color: var(--black);
     }
   }
 
   .monthly-yearly {
-    background-color: var(--off-white);
+    background-color: var(--lighter-grey);
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: start;
 
     h1 {
-      color: var(--dark-grey);
+      color: var(--black);
     }
 
     label {
