--- a/src/app/pages/new-med/new-med.component.html
+++ b/src/app/pages/new-med/new-med.component.html
@@ -169,6 +169,6 @@
       </div>
     </div>
 
-    <button type="submit" class="btn">Criar</button>
+    <button type="submit" class="btn">Salvar</button>
   </form>
 </div>
