--- a/src/app/pages/new-med/new-med.component.scss
+++ b/src/app/pages/new-med/new-med.component.scss
@@ -45,7 +45,7 @@
           margin-right: 1rem;
           margin-bottom: 0.5rem;
           border: none;
-          background-color: var(--off-white);
+          background-color: var(--lighter-grey);
           border-radius: 0.5rem;
         }
 
