--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,6 +7,7 @@
     align-items: center;
     background-color: var(--primary-green);
     z-index: 1;
+    color: var(--white);
 
     button {
       display: none;
