--- a/src/app/components/med-list/med-list.component.scss
+++ b/src/app/components/med-list/med-list.component.scss
@@ -22,6 +22,7 @@
     summary {
       cursor: pointer;
       background-color: var(--primary-green);
+      color: var(--white);
 
       h2 {
         color: var(--white);
@@ -46,6 +47,7 @@
 
       article {
         border-radius: 0 0 6rem 6rem;
+        background-color: var(--lighter-grey);
       }
     }
 
