--- a/src/app/components/times-dialog/times-dialog.component.html
+++ b/src/app/components/times-dialog/times-dialog.component.html
@@ -2,21 +2,23 @@
 <a href="#" (click)="closeDialog(); $event.preventDefault()" class="close"
   ><img src="close.svg" alt="Fechar"
 /></a>
-<div mat-dialog-content>
-  <div class="horarios">
-    @for (group of data.times; track $index) {
-    <hr />
-    <h3>
-      {{ group.date | date : "shortDate" }}
-    </h3>
-    <ul>
-      @for (item of group.times; track $index) {
-      <li>
-        {{ item.dateTime | date : "shortTime" }}
-      </li>
+<div class="dialog">
+  <div mat-dialog-content>
+    <div class="horarios">
+      @for (group of data.times; track $index) {
+      <hr />
+      <h3>
+        {{ group.date | date : "shortDate" }}
+      </h3>
+      <ul>
+        @for (item of group.times; track $index) {
+        <li>
+          {{ item.dateTime | date : "shortTime" }}
+        </li>
+        }
+      </ul>
       }
-    </ul>
-    }
-    <hr />
+      <hr />
+    </div>
   </div>
 </div>
