--- a/src/scss/theme/_theme.scss
+++ b/src/scss/theme/_theme.scss
@@ -38,3 +38,7 @@ a {
   text-decoration: none;
   color: var(--dark-grey);
 }
+
+.mat-mdc-dialog-component-host {
+  background-color: var(--lighter-grey) !important;
+}
