--- a/src/app/components/times-dialog/times-dialog.component.scss
+++ b/src/app/components/times-dialog/times-dialog.component.scss
@@ -6,13 +6,13 @@
   justify-content: left;
   align-items: center;
   position: relative;
-  height: fit-content;
 
   h1 {
     margin-bottom: 1rem;
   }
   h3 {
     font-size: 1rem;
+    color: var(--black);
   }
 
   a {
@@ -26,12 +26,7 @@
 
     li {
       margin-bottom: 5px;
+      color: var(--black);
     }
   }
-}
-.mat-dialog-content {
-  background-color: var(--lighter-grey) !important;
-  display: flex;
-  justify-content: left;
-  height: fit-content;
 }
